add unicode source, add little info on language detection package

--- a/code/P2_AfterMilestone.ipynb
+++ b/code/P2_AfterMilestone.ipynb
@@ -222,7 +222,9 @@
     "                text = text.replace(old, new)\n",
     "        return text\n",
     "\n",
-    "    return df.apply(replace_chars)"
+    "    return df.apply(replace_chars)\n",
+    "\n",
+    "# source: https://www.i18nqa.com/debug/utf8-debug.html, and ChatGPT"
    ]
   },
   {
@@ -866,7 +868,11 @@
     "\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "Language.factory(\"language_detector\", func=get_lang_detector)\n",
-    "nlp.add_pipe('language_detector', last=True)"
+    "nlp.add_pipe('language_detector', last=True)\n",
+    "\n",
+    "\n",
+    "# could be tried instead: https://github.com/saffsd/langid.py\n",
+    "# could be faster than SpaCy"
    ]
   },
   {
