again with P3 update to match the detective story on the website

--- a/code/P3.ipynb
+++ b/code/P3.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color: green;\">For that, we first need to import libraries and set paths </span>"
+    "## <span style=\"color: green;\">To start our work, we first need to import libraries and set paths </span>"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color: green;\">Load cleaned data </span>"
+    "## <span style=\"color: green;\">Now we can begin: Loading cleaned data </span>"
    ]
   },
   {
@@ -290,7 +290,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color: green;\">Filter data for matching </span>"
+    "## <span style=\"color: green;\">We got intel that the Bobo's stronghold resides in the Gluten Free datasets. So to perceive their potential threat, we must match the normal and the Gluten Free datasets. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Before that, we need to filter the data for matching."
    ]
   },
   {
