--- a/code/P3.ipynb
+++ b/code/P3.ipynb
@@ -419,9 +419,218 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color: green;\">Temporal analyis</span>\n",
+    "## <span style=\"color: green;\">Temporal analysis</span>\n",
     "\n",
     "-> can fill with a lot of P2_AfterMilestone from the 'fix_nlp_and_text-formats' branch "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color: red;\">We needed to study the temporal activity of the Bobos to see if they were plotting something shady.</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For that, our temporal analysis will be done in two steps.\n",
+    "<span style=\"color: red;\">Step 1: Checking the number of reviews per year for gluten free beers globally.</span>\n",
+    "<span style=\"color: red;\">Step 2: Checking the number of reviews per year for gluten free beers as a function of the location.</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hence starts our step 1!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the number of ratings per year\n",
+    "# create a Counter\n",
+    "number_rating=Counter(glutenfree['year'])\n",
+    "# sort by year\n",
+    "number_rating_srt=sorted(number_rating.items(), key=lambda pair: pair[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make a list of ('year', 'number of ratings') tuples\n",
+    "plt.figure(figsize=(10,5))\n",
+    "plt.bar([x[0] for x in number_rating_srt], [x[1] for x in number_rating_srt])\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Number of ratings')\n",
+    "plt.title('Temporal analysis of glutenfree beers worldwide')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color: green;\">This plot clearly shows that the ammount of reviews for gluten-free beers is increasing.</span>\n",
+    "### <span style=\"color: blue;\">However, seasoned detectives like us must always stay vigilant: is the reason for this increase because of the increase of the popularity of the site? Or is it because of the increase of total number of reviews in the dataset?</span>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we take all the dates of the ratings, we transform them into 'readable' dates. \n",
+    "#So that, we can count how many ratings by year, we have.\n",
+    "RB_ratings = pd.read_csv(os.path.join(DATA_RateBeer, 'RB_ratings.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RB_ratings['date'].head()\n",
+    "# format 2016-04-26 10:00:00\n",
+    "# get the year \n",
+    "RB_year = RB_ratings['date'].str.split('-').str[0]\n",
+    "# make it into int\n",
+    "RB_year = RB_year.astype(int)\n",
+    "RB_year.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate a Counter object\n",
+    "RB_year_count = Counter(RB_year)\n",
+    "# order the Counter object by year\n",
+    "RB_year_count_srt = sorted(RB_year_count.items(), key=lambda pair: pair[0])\n",
+    "RB_year_count_srt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the number of ratings per year\n",
+    "plt.figure(figsize=(10,5))\n",
+    "plt.bar([pair[0] for pair in RB_year_count_srt], [pair[1] for pair in RB_year_count_srt])\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Count')\n",
+    "plt.title('All beers number of ratings per year')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the proportion of glutenfree beers reviews, match the year\n",
+    "gluten_free_proportion = []\n",
+    "for year, count in number_rating_srt:\n",
+    "    if year in RB_year_count.keys():\n",
+    "        gluten_free_proportion.append((year, count/RB_year_count[year]))\n",
+    "\n",
+    "gluten_free_proportion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10,5))\n",
+    "# plot the proportion of glutenfree beers reviews\n",
+    "plt.bar([pair[0] for pair in gluten_free_proportion], [pair[1] for pair in gluten_free_proportion])\n",
+    "plt.title('Evolution of the proportion of ratings on glutenfree beers')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color: green;\">With that we are sure: the increase of gluten-free beers reviews is not due to the increase of the total number of reviews in the dataset. There can only be one explanation for that: the Bobos are clearly more and more present, globally.</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color: red;\">We can thus proceed to our step 2: the study of the evolution of the number of ratings of glutenfree beers as a function of the location.</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we group united states and europeans countries together\n",
+    "united_states=glutenfree[glutenfree['location'].str.contains('United States',case=False, na=False)]\n",
+    "european_countries = ['France', 'Germany', 'Italy', 'Spain', 'United Kingdom', 'Sweden', 'Norway', 'Denmark']\n",
+    "\n",
+    "europe= glutenfree[glutenfree['location'].isin(european_countries)]\n",
+    "\n",
+    "canada=glutenfree[glutenfree['location']==\"Canada\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uni=united_states.groupby('year')['beer_name'].count()\n",
+    "eur=europe.groupby('year')['beer_name'].count()\n",
+    "can=canada.groupby('year')['beer_name'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.bar(uni.index, uni,label='United States')\n",
+    "plt.title('Number of ratings per year in the United States')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.bar(eur.index, eur)\n",
+    "plt.title('Number of ratings per year in Europe')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.bar(can.index, can)\n",
+    "plt.title('Number of ratings per year in Canada')"
    ]
   },
   {
