--- a/code/P3.ipynb
+++ b/code/P3.ipynb
@@ -4616,7 +4616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Complete the 'year' column"
+    "### Complete the 'year' column"
    ]
   },
   {
@@ -4635,6 +4635,13 @@
     "# format 2016-04-26 10:00:00\n",
     "reviews_style_lang['year'] = reviews_style_lang['date'].str.split('-').str[0].astype(int)\n",
     "reviews_en_fr['year'] = reviews_en_fr['date'].str.split('-').str[0].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Study the evolution of the number of reviews over time"
    ]
   },
   {
