--- a/code/P3.ipynb
+++ b/code/P3.ipynb
@@ -5411,7 +5411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interactive map."
+    "Interactive map. The size of the human icon represents the number of users, but the size-scaling follows a cubic root function to avoid the dominance of large countries (I decided arbitrarily)."
    ]
   },
   {
