--- a/code/P3_from_branch.ipynb
+++ b/code/P3_from_branch.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color: green;\">Import libraries and set paths </span>"
+    "## <span style=\"color: blue;\">As seasoned detectives, and to start our quest, we first need to gather all the information relevant to find the Bobos.</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color: green;\">To start our work, we first need to import libraries and set paths </span>"
    ]
   },
   {
@@ -83,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color: green;\">PART 0. Preproccesing and Data Cleaning</span>"
+    "## <span style=\"color: green;\">Now we can begin: PART 0. Preproccesing and Data Cleaning</span>"
    ]
   },
   {
@@ -142,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### BeerAdvocate (BA) Data"
+    "### BeerAdvocate (BA) Data"
    ]
   },
   {
@@ -270,7 +277,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color: green;\">Filter data for matching </span>"
+    "## <span style=\"color: green;\">We got intel that the Bobo's stronghold resides in the Gluten Free datasets. So to perceive their potential threat, we must match the normal and the Gluten Free datasets. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Before that, we need to filter the data for matching."
    ]
   },
   {
@@ -912,14 +926,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color: green;\">Language processing</span>"
+    "### <span style=\"color: red;\">For our quest, and to more easily highlight the Bobos, we need to detect what they have to say on the Beers. This basically implies that we need to analyse the beer reviews.</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Language identification"
+    "### <span style=\"color: red;\">We start our textual analysis by a general EDA to detect the languages that are present in the dataset</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color: red;\">Hence we start! Part 1:Language processing</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.1 Language identification"
    ]
   },
   {
@@ -961,11 +989,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''General function to detect the languages'''\n",
     "import spacy\n",
     "import spacy_transformers\n",
     "from spacy.language import Language\n",
@@ -979,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -994,6 +1028,7 @@
     }
    ],
    "source": [
+    "'''We now define the model's pipeline'''\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "#nlp = spacy.load(\"en_core_web_trf\")    # works less good than _sm\n",
     "Language.factory(\"language_detector\", func=get_lang_detector)\n",
@@ -1014,6 +1049,7 @@
     }
    ],
    "source": [
+    "'''Add the detected languages'''\n",
     "reviews_languages = []\n",
     "\n",
     "for row in tqdm(range(len(reviews_style_2))):\n",
@@ -3088,7 +3124,7 @@
        "      <td>6</td>\n",
        "      <td>12</td>\n",
        "      <td>2.8</td>\n",
-       "      <td>Bottled from Ica à",
+       "      <td>Bottled from Ica à\n",
        "keredClear golden with a b...</td>\n",
        "      <td>Sweden</td>\n",
        "      <td>2015</td>\n",
