--- a/code/P3_from_branch.ipynb
+++ b/code/P3_from_branch.ipynb
@@ -3124,7 +3124,8 @@
        "      <td>6</td>\n",
        "      <td>12</td>\n",
        "      <td>2.8</td>\n",
-       "      <td>Bottled from Ica à\n",
+       "      <td>Bottled from Ica à",
+       "\n",
        "keredClear golden with a b...</td>\n",
        "      <td>Sweden</td>\n",
        "      <td>2015</td>\n",
@@ -4362,6 +4363,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## <span style=\"color: red;\">We needed to study the temporal activity of the Bobos to see if they were plotting something shady.</span>\n",
+    "#### For that, our temporal analysis will be done in two steps.\n",
+    "<span style=\"color: red;\">Step 1: Checking the number of reviews per year for gluten free beers globally.</span>\n",
+    "<span style=\"color: red;\">Step 2: Checking the number of reviews per year for gluten free beers as a function of the location.</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We want to know if the temporal evolution of the reviews for glutenfree beers. Thus we plot the number of reviews per year for the glutenfree beers over time."
    ]
   },
@@ -4415,6 +4426,14 @@
    "metadata": {},
    "source": [
     "It showed that the ammount of reviews for gluten-free beers is increasing over time. Does it reflect the increasing popularity? Or it is simply because of the increase of total number of reviews in the dataset? To answer that, the temporal evolution of all reviews was computed and applied for normalization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color: green;\">This plot clearly shows that the ammount of reviews for gluten-free beers is increasing.</span>\n",
+    "### <span style=\"color: blue;\">However, seasoned detectives like us must always stay vigilant: is the reason for this increase because of the increase of the popularity of the site? Or is it because of the increase of total number of reviews in the dataset?</span>"
    ]
   },
   {
@@ -4527,6 +4546,13 @@
    "metadata": {},
    "source": [
     "It shows that the increase of reviews for gluten-free beers is not due to the increase of total number of reviews. Thus, the increasing popularity of gluten-free beers is confirmed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color: green;\">With that we are sure: the increase of gluten-free beers reviews is not due to the increase of the total number of reviews in the dataset. There can only be one explanation for that: the Bobos are clearly more and more present, globally.</span>"
    ]
   },
   {
