some markdowns deletion

--- a/code/P3.ipynb
+++ b/code/P3.ipynb
@@ -989,11 +989,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -3124,7 +3119,7 @@
        "      <td>6</td>\n",
        "      <td>12</td>\n",
        "      <td>2.8</td>\n",
-       "      <td>Bottled from Ica à",
+       "      <td>Bottled from Ica à\n",
        "\n",
        "keredClear golden with a b...</td>\n",
        "      <td>Sweden</td>\n",
@@ -4425,13 +4420,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It showed that the ammount of reviews for gluten-free beers is increasing over time. Does it reflect the increasing popularity? Or it is simply because of the increase of total number of reviews in the dataset? To answer that, the temporal evolution of all reviews was computed and applied for normalization."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### <span style=\"color: green;\">This plot clearly shows that the ammount of reviews for gluten-free beers is increasing.</span>\n",
     "### <span style=\"color: blue;\">However, seasoned detectives like us must always stay vigilant: is the reason for this increase because of the increase of the popularity of the site? Or is it because of the increase of total number of reviews in the dataset?</span>"
    ]
@@ -4539,13 +4527,6 @@
     "plt.xlabel('Year')\n",
     "plt.ylabel('Proportion of glutenfree reviews')\n",
     "plt.title('Temporal analysis of glutenfree beers proportion worldwide')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It shows that the increase of reviews for gluten-free beers is not due to the increase of total number of reviews. Thus, the increasing popularity of gluten-free beers is confirmed."
    ]
   },
   {
