add first part of P2_After milestone where we read in the txt files and create the glutenfree dataset

--- a/code/P3.ipynb
+++ b/code/P3.ipynb
@@ -97,6 +97,251 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We focus only on the ratings data, as it contains data with and without text, and the review is basically just a cleaner form of the ratings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color: green;\">Read in and clean data </span> <span style=\"color: red;\">(do not execute)</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Beeradvocate (BA) dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read in ratings.txt\n",
+    "BA_ratings = read_ratings_txt(DATA_BeerAdvocate, \"ratings.txt\")\n",
+    "# clean the missing unicodes\n",
+    "BA_ratings['text'] = unicode_conversion(BA_ratings['text'])\n",
+    "# temporarily save as csv\n",
+    "BA_ratings.to_csv(os.path.join(DATA_BeerAdvocate, \"BA_ratings.csv\"), index=False, encoding='utf-8')\n",
+    "# BeerAdvocate_ratings\n",
+    "with open(os.path.join(DATA_BeerAdvocate, \"BA_ratings.pkl\"), 'wb') as f:\n",
+    "    pickle.dump(BA_ratings, f)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ratebeer (RB) dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read in ratings.txt\n",
+    "RB_ratings = read_ratings_txt(DATA_RateBeer, \"ratings.txt\") # has no 'review' column\n",
+    "# clean the missing unicodes\n",
+    "RB_ratings['text'] = unicode_conversion(RB_ratings['text'])\n",
+    "# temporarily save as csv\n",
+    "RB_ratings.to_csv(os.path.join(DATA_RateBeer, \"RB_ratings.csv\"), index=False, encoding='utf-8')\n",
+    "# RateBeer_ratings\n",
+    "with open(os.path.join(DATA_RateBeer, \"RB_ratings.pkl\"), 'wb') as f:\n",
+    "    pickle.dump(RB_ratings, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color: green;\">Create the glutenfree data </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Looking at what beers are gluten-free in RateBeer and BeerAdvocate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of gluten-free beers in RateBeer: 248\n"
+     ]
+    }
+   ],
+   "source": [
+    "rb_gf_beers=RB_beers[RB_beers['beer_name'].str.contains('gluten',case=False, na=False)]\n",
+    "rb_gf_beers_id=rb_gf_beers['beer_id']\n",
+    "print(\"Number of gluten-free beers in RateBeer:\",rb_gf_beers.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of gluten-free beers in BeerAdvocate: 147\n"
+     ]
+    }
+   ],
+   "source": [
+    "ba_gf_beers=BA_beers[BA_beers['beer_name'].str.contains('gluten',case=False, na=False)]\n",
+    "ba_gf_beers_id=ba_gf_beers['beer_id']\n",
+    "print(\"Number of gluten-free beers in BeerAdvocate:\",ba_gf_beers.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are  21  beers present in both dataset\n",
+      "those beers are: \n",
+      " ['Glutenberg 8' 'Glutenberg Cuvée Sauvage' 'Glutenberg Double Belge'\n",
+      " 'Glutenberg Double IPA' 'Glutenberg Gose'\n",
+      " 'Glutenberg Impérial Buchweizen' 'Glutenberg India Pale Ale'\n",
+      " 'Glutenberg Myrcène De Glace'\n",
+      " 'Glutenberg Myrcène De Glace (Brassin Spécial)' 'Drummond Gluten Free'\n",
+      " 'Nickel Brook Bull Eye Gluten Free Pale Ale'\n",
+      " 'Puerto Dorado Cerveza Sin Gluten' 'Riedenburger Gluten Frei'\n",
+      " 'Neumarkter Lammsbräu Glutenfrei' 'San Miguel Gluten Free'\n",
+      " 'Brok Gluten Free' 'Boxer Gluten Free' 'NGB Gluten Free Lager'\n",
+      " 'Portsmouth Gluten Minimus Saison' 'Brunehaut Bio Ambrée Gluten Free'\n",
+      " 'Slaapmutske Dubbel Glutenvrij']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Number of coinciding beers between the two datasets:\n",
+    "coinciding_gf_beer=ba_gf_beers['beer_name'].isin(rb_gf_beers['beer_name'])\n",
+    "print('there are ', coinciding_gf_beer.sum(),' beers present in both dataset')\n",
+    "print('those beers are:','\\n',ba_gf_beers[coinciding_gf_beer]['beer_name'].values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Creation of review sub-dataset for only gluten-free beers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rb_gf_ratings=RB_ratings[RB_ratings['beer_id'].isin(rb_gf_beers_id)]\n",
+    "rb_gf_ratings=rb_gf_ratings.merge(RB_users[['user_id','location']],on='user_id') #add location of users\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For BeerAdvocate dataset, user_id are in form of \"user_name.#someID\", which creates problem when trying to merge on it, so we need to convert it to an actual numeric id. Here we will keep the id that is after the dot. This doesn't grant uniqueness of IDs, depleting the duplicates will"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "# leave only the numbers in the user_id column (else it wouldnt work)\n",
+    "BA_users['user_id'] = BA_users['user_id'].apply(lambda x: re.findall(r'\\.(\\d+)', x)[0]).astype(int)\n",
+    "BA_ratings['user_id'] = BA_ratings['user_id'].apply(lambda x: re.findall(r'\\.(\\d+)', x)[0]).astype(int)\n",
+    "\n",
+    "duplicate_ba_id=BA_users[BA_users['user_id'].duplicated(keep='first')]['user_id']\n",
+    "BA_users=BA_users.drop(axis=0, index=duplicate_ba_id.index.values)\n",
+    "duplicate_ba_id_indexinratings= BA_ratings[BA_ratings['user_id'].isin(duplicate_ba_id)].index.values #get index of ratings placed by person with duplicate id\n",
+    "BA_ratings=BA_ratings.drop(axis=0,index=duplicate_ba_id_indexinratings)\n",
+    "\n",
+    "ba_gf_ratings=BA_ratings[BA_ratings['beer_id'].isin(ba_gf_beers['beer_id'])]\n",
+    "ba_gf_ratings=ba_gf_ratings.merge(BA_users[['user_id','location']],on='user_id')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Change date to year only\n",
+    "\n",
+    "Output of the timestamp function is not easily useable to look at evolution overtime. To change that, we will only look at the year of the ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if the data is read in only partially, for testing, we need to remove the NaNs\n",
+    "#RB_ratings.drop(RB_ratings.index[-1], inplace=True)\n",
+    "#BA_ratings.drop(BA_ratings.index[-1], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BA_ratings['year']=BA_ratings['date'].apply(lambda x:int(x[:4])) #4 first characters of timestamp is the year the rating was posted\n",
+    "ba_gf_ratings['year']=ba_gf_ratings['date'].apply(lambda x:int(x[:4]))\n",
+    "\n",
+    "RB_ratings['year']=RB_ratings['date'].apply(lambda x:int(x[:4])) #4 first characters of timestamp is the year the rating was posted\n",
+    "rb_gf_ratings['year']=rb_gf_ratings['date'].apply(lambda x:int(x[:4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unicode_conversion(rb_gf_ratings['text'])\n",
+    "unicode_conversion(ba_gf_ratings['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rb_gf_ratings.to_csv((os.path.join(DATA_RateBeer, \"rb_gf_ratings.csv\")),index=False,header=True,encoding='utf-8')\n",
+    "ba_gf_ratings.to_csv((os.path.join(DATA_BeerAdvocate, \"ba_gf_ratings.csv\")),index=False,header=True,encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <span style=\"color: green;\">Load cleaned data </span>"
    ]
   },
@@ -149,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### BeerAdvocate (BA) Data"
+    "#### BeerAdvocate (BA) Data"
    ]
   },
   {
@@ -207,8 +452,8 @@
     }
    ],
    "source": [
+    "# the review column needs to be formatted correctly\n",
     "# show true and false values in BA_ratings['review']\n",
-    "\n",
     "var = BA_ratings['review'].unique()\n",
     "\n",
     "# replace the true and false values in BA_ratings['review'] with True and False\n",
