--- a/code/P3.ipynb
+++ b/code/P3.ipynb
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color: green;\">Create the glutenfree data </span>"
+    "### <span style=\"color: green;\">Create the glutenfree data </span> <span style=\"color: red;\">(do not execute)</span>"
    ]
   },
   {
@@ -248,6 +248,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the RB dataset first"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -261,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For BeerAdvocate dataset, user_id are in form of \"user_name.#someID\", which creates problem when trying to merge on it, so we need to convert it to an actual numeric id. Here we will keep the id that is after the dot. This doesn't grant uniqueness of IDs, depleting the duplicates will"
+    "For the BeerAdvocate dataset, user_id are in form of \"user_name.#someID\", which creates problem when trying to merge on it, so we need to convert it to an actual numeric id. Here we will keep the id that is after the dot. This doesn't grant uniqueness of IDs, depleting the duplicates will"
    ]
   },
   {
@@ -324,6 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# clean the unicodes\n",
     "unicode_conversion(rb_gf_ratings['text'])\n",
     "unicode_conversion(ba_gf_ratings['text'])"
    ]
@@ -1054,13 +1062,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We keep only beer-types present in gluten-free beers such that we can compare the two groups by style."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Keep only beer-types present in gluten-free beers\n",
-    "\n",
     "gf_beers=gf_ratings['beer_name'].unique()\n",
     "\n",
     "for i in range(len(gf_beers)): #Somehow there is a space at beginning of beer_names\n",
