--- a/code/P3.ipynb
+++ b/code/P3.ipynb
@@ -5340,7 +5340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -5420,7 +5420,7 @@
          "name": "",
          "showlegend": true,
          "textfont": {
-          "size": 15
+          "size": 10
          },
          "type": "pie",
          "values": [
@@ -5530,7 +5530,7 @@
          "name": "",
          "showlegend": true,
          "textfont": {
-          "size": 15
+          "size": 10
          },
          "type": "pie",
          "values": [
@@ -5576,30 +5576,30 @@
          {
           "font": {
            "color": "black",
-           "size": 30
+           "size": 20
           },
           "showarrow": false,
-          "text": "Glutenfree",
-          "x": 0.18,
+          "text": "GF",
+          "x": 0.21,
           "y": 0.5
          },
          {
           "font": {
            "color": "black",
-           "size": 30
+           "size": 20
           },
           "showarrow": false,
-          "text": "Non-glutenfree",
-          "x": 0.84,
+          "text": "Non-GF",
+          "x": 0.83,
           "y": 0.5
          }
         ],
-        "height": 1000,
+        "height": 600,
         "legend": {
          "orientation": "h",
          "x": 1,
          "xanchor": "right",
-         "y": -0.1,
+         "y": -0.4,
          "yanchor": "bottom"
         },
         "margin": {
@@ -6424,17 +6424,7 @@
           }
          }
         },
-        "title": {
-         "font": {
-          "size": 30
-         },
-         "text": "Beer styles",
-         "x": 0.5,
-         "xanchor": "center",
-         "y": 0.95,
-         "yanchor": "top"
-        },
-        "width": 1500
+        "width": 600
        }
       }
      },
@@ -6451,8 +6441,8 @@
     "non_glutenfree_data.columns = ['style', 'count']\n",
     "\n",
     "# Set the size of the subplots\n",
-    "subplot_width = 1000\n",
-    "subplot_height = 1000\n",
+    "subplot_width = 300\n",
+    "subplot_height = 400\n",
     "\n",
     "# Create subplots of type 'pie'\n",
     "fig = sp.make_subplots(rows=1, cols=2, specs=[[{'type':'pie'}, {'type':'pie'}]], horizontal_spacing=0.05)\n",
@@ -6473,7 +6463,7 @@
     "labels = ['Other (<3%)' if small else label for small, label in zip(small_percentages, labels)]\n",
     "# update the label\n",
     "fig_glutenfree.data[0].labels = labels\n",
-    "fig_glutenfree.update_traces(marker=dict(colors=color_gf, line=dict(color='#000000', width=2)), textfont_size=15)\n",
+    "fig_glutenfree.update_traces(marker=dict(colors=color_gf, line=dict(color='#000000', width=2)), textfont_size=10)\n",
     "fig_glutenfree.update_layout(width=subplot_width, height=subplot_height)\n",
     "\n",
     "# Plot interactive pie chart for non-glutenfree beers\n",
@@ -6486,7 +6476,7 @@
     "labels = ['Other (<3%)' if small else label for small, label in zip(small_percentages, labels)]\n",
     "# update the label\n",
     "fig_non_glutenfree.data[0].labels = labels\n",
-    "fig_non_glutenfree.update_traces(marker=dict(colors=color_ngf, line=dict(color='#000000', width=2)), textfont_size=15)\n",
+    "fig_non_glutenfree.update_traces(marker=dict(colors=color_ngf, line=dict(color='#000000', width=2)), textfont_size=10)\n",
     "fig_non_glutenfree.update_layout(width=subplot_width, height=subplot_height)\n",
     "\n",
     "# Add pie chart traces to subplots\n",
@@ -6494,11 +6484,11 @@
     "fig.add_trace(fig_non_glutenfree['data'][0], row=1, col=2)\n",
     "\n",
     "# Set layout for the entire figure\n",
-    "fig.update_layout(width=1500, height=1000, \n",
-    "                  annotations=[dict(text='Glutenfree', x=0.18, y=0.5, font_size=30, showarrow=False, font_color='black'),\n",
-    "                                 dict(text='Non-glutenfree', x=0.84, y=0.5, font_size=30, showarrow=False, font_color='black')],\n",
-    "                    title=dict(text='Beer styles', x=0.5, y=0.95, font_size=30, xanchor='center', yanchor='top'),\n",
-    "                    legend=dict(orientation='h', yanchor='bottom', y=-0.1, xanchor='right', x=1),\n",
+    "fig.update_layout(width=600, height=600,\n",
+    "                  annotations=[dict(text='GF', x=0.21, y=0.5, font_size=20, showarrow=False, font_color='black'),\n",
+    "                                 dict(text='Non-GF', x=0.83, y=0.5, font_size=20, showarrow=False, font_color='black')],\n",
+    "                    # title=dict(text='Beer styles', x=0.5, y=0.95, font_size=15, xanchor='center', yanchor='top'),\n",
+    "                    legend=dict(orientation='h', yanchor='bottom', y=-0.4, xanchor='right', x=1),\n",
     "                    margin=dict(l=0, r=0, t=100, b=0))\n",
     "\n",
     "# Show the interactive charts\n",
